--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,30 @@
 spring.application.name=helloSpringBootSecurity
 
 #DataSource Setting
-spring.datasource.url=jdbc:mysql://localhost:3306/member?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/product_management?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=csedbadmin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA Setting
+# === SQL 초기화 (개발 프로파일 전용) ===
+# executes initialization scripts(schema.sql, data.sql) every time the application is run
+spring.sql.init.mode=always
+# used to configure the encoding of initialization scripts
+spring.sql.init.encoding= UTF-8
+
+#  === JPA ===
+# 운영은 validate, 개발은 create 또는 update
+# create: drop and create the schema, destroying previous data.
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
+# After the ddl-auto execution, data.sql is executed and the data is applied
+# spring.jpa.hibernate.ddl-auto=create로 먼저,  DB에 기존 엔티티 테이블 제거 후 테이블을 재 생성하고,
+# 그 다음에 data.sql을 실행하여 생성된 테이블에 초기 데이터들을 삽입한다.
+# 이 순서를 보장하기 위해서 아래 설정을 추가한다.
+spring.jpa.defer-datasource-initialization=true
 
 # Logging Level Setting
 logging.level.kr.ac.hansung=debug
+
 
