스프링부트 앱 재시작시 마다 data.sql의 레코드들이 재삽입되는 문제 방지를 위해 ddl-auto는 update로 유지 & spring.sql.init.mode=always 와 spring.jpa.defer-datasource-initialization=true 속성은 주석처리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # === SQL 초기화 (개발 프로파일 전용) ===
 # executes initialization scripts(schema.sql, data.sql) every time the application is run
-spring.sql.init.mode=always
+
+#####!!!#####
+# spring.sql.init.mode=always
+#####!!!#####
+
 # used to configure the encoding of initialization scripts
 spring.sql.init.encoding= UTF-8
 
@@ -22,7 +26,10 @@ spring.jpa.properties.hibernate.format_sql=false
 # spring.jpa.hibernate.ddl-auto=create로 먼저,  DB에 기존 엔티티 테이블 제거 후 테이블을 재 생성하고,
 # 그 다음에 data.sql을 실행하여 생성된 테이블에 초기 데이터들을 삽입한다.
 # 이 순서를 보장하기 위해서 아래 설정을 추가한다.
-spring.jpa.defer-datasource-initialization=true
+
+#####!!!#####
+# spring.jpa.defer-datasource-initialization=true
+#####!!!#####
 
 # Logging Level Setting
 logging.level.kr.ac.hansung=debug
