--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # executes initialization scripts(schema.sql, data.sql) every time the application is run
 
 #####!!!#####
- #spring.sql.init.mode=always
+ spring.sql.init.mode=always
 #####!!!#####
 
 # used to configure the encoding of initialization scripts
@@ -19,7 +19,7 @@ spring.sql.init.encoding= UTF-8
 #  === JPA ===
 # 운영은 validate, 개발은 create 또는 update
 # create: drop and create the schema, destroying previous data.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 # After the ddl-auto execution, data.sql is executed and the data is applied
@@ -28,7 +28,7 @@ spring.jpa.properties.hibernate.format_sql=false
 # 이 순서를 보장하기 위해서 아래 설정을 추가한다.
 
 #####!!!#####
- #spring.jpa.defer-datasource-initialization=true
+ spring.jpa.defer-datasource-initialization=true
 #####!!!#####
 
 # Logging Level Setting
